2012-02-08 Patrik Nisen <patrik at nisen dot name>
	* src/bord.cpp:11149 add block to convert intern integer
	representation of categories back as strings for output

2012-02-07 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in function loadIndex, allow
	thePart->currentDataDir() to be nil (for in memory data)

2012-02-05 John Wu <John dot Wu at ACM dot org>
	* src/ikeywords.cpp:411 neglected to multiply 2048 in the size
	computation (a problem reported by Julian Suszko <suszko @ a9.com>

2012-01-10 John Wu <John dot Wu at ACM dot org>
	* src/*, examples/*: update copyright year to 2013
	* src/index.h: add function getSerialSize as a protected member
	function since it already exist in all the derived classes
	* examples/ibis.cpp: add a default where clause "1=1" when the
	user does not provide one

2012-12-19 John Wu <John dot Wu at ACM dot org>
	* src/filter.h, src/filter.cpp: add a new constructor to work with
	previously saved query results (as a bitvector) in response to a
	request from Patrik Nisen

2012-12-08 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: introduce variable evt to evaluateRange and
	estimateRange to simplifying logging statements

2012-12-07 Patrik Nisen <patrik at nisen dot name>
	* src/bord.cpp: ibis::bord::cursor::fillRow used incorrect names
	for unsigned integers

2012-12-07 John Wu <John dot Wu at ACM dot org>
	* src/i*.cpp: allow getValuesArray to be used when generating new
	indexes
	* src/table.h, src/part.h: remove the default arguments from the
	versions of buildIndexes, they can be easily confused in
	ibis::bord
	* src/part.cpp: change most of getRawData to getValuesArray to
	accomodate in-memmory data partition

2012-12-06 John Wu <John dot Wu at ACM dot org>
	* src/i*.cpp: check for empty file name returned from
	indexFileName in function write
	* src/column.cpp: allow actualMinMax to make use of arrays
	returned by column::getValuesArray
	* src/index.cpp: allow getValuesArray to be used when a file name